<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/Baby_Blue"
       >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="50dp"
            android:background="@drawable/navy_blue_bg"
            >

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/baseline_account_circle_24"
                />

            <ImageView
                android:id="@+id/plus_icon"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:src="@drawable/baseline_add_circle_24"
                android:layout_alignBottom="@id/profile_pic"
                android:layout_alignEnd="@id/profile_pic"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="25dp"
              />



        </RelativeLayout>

        <TextView
            android:id="@+id/profile_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_text"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="25dp"
            />

        <TextView
            android:id="@+id/profile_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Joined September 2024"
            android:textSize="14sp"
            android:textColor="#666666"
            android:layout_marginStart="25dp"
            />


        <!-- Email -->
        <Button
            android:id="@+id/profile_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/profile_save_text"
            android:textSize="20sp"
            android:backgroundTint="@color/Grotto"
            />

        <EditText
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:paddingStart="10dp"
            android:hint="@string/profile_enter_email"
            android:textColorHint="@color/Darker_Gray"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/profile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:paddingStart="10dp"
            android:hint="@string/profile_enter_username"
            android:textColorHint="@color/Darker_Gray"
            android:textColor="@color/black"
            />

     <EditText
         android:id="@+id/profile_contact"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/custom_edittext"
         android:paddingBottom="15dp"
         android:paddingTop="15dp"
         android:paddingStart="10dp"
         android:hint="@string/profile_enter_contact"
         android:textColorHint="@color/Darker_Gray"
         android:textColor="@color/black"
         />

        <!-- Country Selection -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/profile_tv7"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/country_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_country"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="124dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/horizontal_line"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <TextView
                android:id="@+id/profile_tv9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthdate_text"
                android:textSize="20sp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/profile_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="dd/mm/yyyy"
                android:focusable="false"
                android:clickable="true"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/baseline_calendar_month_24"
                android:textColor="@color/black" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/horizontal_line"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/profile_tv10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="25dp"
            android:layout_marginTop="12dp"
            />



        <RadioGroup
            android:id="@+id/radioGroupgender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

         <RadioButton
             android:id="@+id/radioMale"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/rb_male"
             android:textSize="15sp"
             android:textStyle="bold"
             android:textColor="@color/white"
             android:padding="8dp"
             android:drawableStart="@drawable/baseline_male_24"
             android:button="@null"
             android:background="@drawable/radio_bg"
             android:layout_marginStart="25dp"
             android:layout_marginEnd="10dp"
             android:layout_marginTop="15dp"
             android:paddingEnd="25dp"

             />



            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_text"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:padding="8dp"
                android:drawableStart="@drawable/baseline_female_24"
                android:button="@null"
                android:background="@drawable/radio_bg"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:paddingEnd="25dp"

                />


            <RadioButton
                android:id="@+id/radioOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pr_other_text"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:padding="8dp"
                android:drawableStart="@drawable/baseline_male_24"
                android:button="@null"
                android:background="@drawable/radio_bg"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:paddingEnd="25dp"

                />

        </RadioGroup>



    </LinearLayout>



</ScrollView>