<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".LearningModule">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fireIcon"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/fire"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/streakText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/streak"
            android:textSize="28sp"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/progressIcon"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/up"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/XpText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/xp"
            android:textSize="28sp"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/unitContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/unit_border2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayout">

        <TextView
            android:id="@+id/unitNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/unit_no"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/unitName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/unit_title"
            android:textColor="@color/white"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unitNo" />

        <View
            android:id="@+id/verticalLine"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/unitImg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/unitImg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.542"
            app:srcCompat="@drawable/abc"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="50dp"
        android:elevation="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unitContainer"
        tools:ignore="UnknownIdInLayout">

        <Button
            android:id="@+id/b1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="changeFrag"
            android:text="@string/one"
            android:textColor="#000000"
            tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />
<!--            android:background="@color/green"-->

        <Button
            android:id="@+id/b2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:onClick="changeFrag"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textColor="@color/Grotto"
            android:text="@string/two" />

        <Button
            android:id="@+id/b3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="changeFrag"
            android:textColor="@color/Grotto"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/three"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/b4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/Grotto"
            android:onClick="changeFrag"
            android:layout_weight="1"
            android:text="@string/four"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/b5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textColor="@color/Grotto"
            android:text="@string/five"
            android:onClick="changeFrag"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintButtonSize" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/scrollFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
